@@ -106,7 +106,8 @@ public class ContainerPartArcaneCraftingTerminal
 	/**
 	 * Total number of slots in the crafting grid
 	 */
-	public static int CRAFTING_GRID_TOTAL_SIZE = CRAFTING_GRID_SIZE * CRAFTING_GRID_SIZE;
+	public static int CRAFTING_GRID_TOTAL_SIZE = ContainerPartArcaneCraftingTerminal.CRAFTING_GRID_SIZE *
+					ContainerPartArcaneCraftingTerminal.CRAFTING_GRID_SIZE;
 
 	/**
 	 * Starting position for crafting slots.
@@ -222,21 +223,21 @@ public class ContainerPartArcaneCraftingTerminal
 		this.playerSource = new PlayerSource( this.player, terminal );
 
 		// Bind to the players inventory
-		this.bindPlayerInventory( player.inventory, PLAYER_INV_POSITION_Y,
-			HOTBAR_INV_POSITION_Y );
+		this.bindPlayerInventory( player.inventory, ContainerPartArcaneCraftingTerminal.PLAYER_INV_POSITION_Y,
+			ContainerPartArcaneCraftingTerminal.HOTBAR_INV_POSITION_Y );
 
 		// Add crafting slots
 		Slot craftingSlot = null;
-		for( int row = 0; row < CRAFTING_GRID_SIZE; row++ )
+		for( int row = 0; row < ContainerPartArcaneCraftingTerminal.CRAFTING_GRID_SIZE; row++ )
 		{
-			for( int column = 0; column < CRAFTING_GRID_SIZE; column++ )
+			for( int column = 0; column < ContainerPartArcaneCraftingTerminal.CRAFTING_GRID_SIZE; column++ )
 			{
 				// Calculate the index
-				int slotIndex = ( row * CRAFTING_GRID_SIZE ) + column;
+				int slotIndex = ( row * ContainerPartArcaneCraftingTerminal.CRAFTING_GRID_SIZE ) + column;
 
 				// Create the slot
-				craftingSlot = new Slot( terminal, slotIndex, CRAFTING_SLOT_X_POS +
-								( column * ContainerWithPlayerInventory.SLOT_SIZE ), CRAFTING_SLOT_Y_POS +
+				craftingSlot = new Slot( terminal, slotIndex, ContainerPartArcaneCraftingTerminal.CRAFTING_SLOT_X_POS +
+								( column * ContainerWithPlayerInventory.SLOT_SIZE ), ContainerPartArcaneCraftingTerminal.CRAFTING_SLOT_Y_POS +
 												( row * ContainerWithPlayerInventory.SLOT_SIZE ) );
 
 				// Add the slot
@@ -258,15 +259,15 @@ public class ContainerPartArcaneCraftingTerminal
 
 		// Create the result slot
 		this.resultSlot = new SlotArcaneCraftingResult( player, this, terminal, terminal,
-						PartArcaneCraftingTerminal.RESULT_SLOT_INDEX, RESULT_SLOT_X_POS,
-						RESULT_SLOT_Y_POS );
+						PartArcaneCraftingTerminal.RESULT_SLOT_INDEX, ContainerPartArcaneCraftingTerminal.RESULT_SLOT_X_POS,
+						ContainerPartArcaneCraftingTerminal.RESULT_SLOT_Y_POS );
 
 		// Add the result slot
 		this.addSlotToContainer( this.resultSlot );
 
 		// Create the wand slot
 		this.wandSlot = new SlotRestrictive( terminal, PartArcaneCraftingTerminal.WAND_SLOT_INDEX,
-						WAND_SLOT_XPOS, WAND_SLOT_YPOS );
+						ContainerPartArcaneCraftingTerminal.WAND_SLOT_XPOS, ContainerPartArcaneCraftingTerminal.WAND_SLOT_YPOS );
 
 		// Add the wand slot
 		this.addSlotToContainer( this.wandSlot );
@@ -277,10 +278,10 @@ public class ContainerPartArcaneCraftingTerminal
 		{
 			// Calculate the y position
 			int row = viewSlotID - PartArcaneCraftingTerminal.VIEW_SLOT_MIN;
-			int yPos = VIEW_SLOT_YPOS + ( row * ContainerWithPlayerInventory.SLOT_SIZE );
+			int yPos = ContainerPartArcaneCraftingTerminal.VIEW_SLOT_YPOS + ( row * ContainerWithPlayerInventory.SLOT_SIZE );
 
 			// Create the slot
-			viewSlot = new SlotRestrictive( terminal, viewSlotID, VIEW_SLOT_XPOS, yPos );
+			viewSlot = new SlotRestrictive( terminal, viewSlotID, ContainerPartArcaneCraftingTerminal.VIEW_SLOT_XPOS, yPos );
 
 			// Add the slot
 			this.addSlotToContainer( viewSlot );
@@ -299,14 +300,14 @@ public class ContainerPartArcaneCraftingTerminal
 		}
 
 		// Create the armor slots
-		for( int armorIndex = 0; armorIndex < ARMOR_SLOT_COUNT; ++armorIndex )
+		for( int armorIndex = 0; armorIndex < ContainerPartArcaneCraftingTerminal.ARMOR_SLOT_COUNT; ++armorIndex )
 		{
 			// Calculate y position
-			int yPos = ARMOR_SLOT_Y_POS + ( ContainerWithPlayerInventory.SLOT_SIZE * armorIndex );
+			int yPos = ContainerPartArcaneCraftingTerminal.ARMOR_SLOT_Y_POS + ( ContainerWithPlayerInventory.SLOT_SIZE * armorIndex );
 
 			// Create the slot
 			SlotArmor armorSlot = new SlotArmor( terminal, PartArcaneCraftingTerminal.ARMOR_SLOT_MIN + armorIndex,
-							ARMOR_SLOT_X_POS, yPos, armorIndex, false );
+							ContainerPartArcaneCraftingTerminal.ARMOR_SLOT_X_POS, yPos, armorIndex, false );
 
 			// Add to container
 			this.addSlotToContainer( armorSlot );
@@ -561,7 +562,7 @@ public class ContainerPartArcaneCraftingTerminal
 
 		// Is there a matching recipe?
 		IArcaneRecipe matchingRecipe = ArcaneRecipeHelper.INSTANCE.findMatchingArcaneResult( this.terminal, 0,
-			CRAFTING_GRID_TOTAL_SIZE, this.player );
+			ContainerPartArcaneCraftingTerminal.CRAFTING_GRID_TOTAL_SIZE, this.player );
 
 		if( matchingRecipe != null )
 		{
@@ -582,17 +583,17 @@ public class ContainerPartArcaneCraftingTerminal
 	{
 		// Create a new crafting inventory
 		InventoryCrafting craftingInventory = new InventoryCrafting( new ContainerInternalCrafting(),
-						CRAFTING_GRID_SIZE, CRAFTING_GRID_SIZE );
+						ContainerPartArcaneCraftingTerminal.CRAFTING_GRID_SIZE, ContainerPartArcaneCraftingTerminal.CRAFTING_GRID_SIZE );
 
 		// Load the inventory based on what is in the part's inventory
-		for( int slotIndex = 0; slotIndex < ( CRAFTING_GRID_TOTAL_SIZE ); slotIndex++ )
+		for( int slotIndex = 0; slotIndex < ( ContainerPartArcaneCraftingTerminal.CRAFTING_GRID_TOTAL_SIZE ); slotIndex++ )
 		{
 			// Set the slot
 			craftingInventory.setInventorySlotContents( slotIndex, this.terminal.getStackInSlot( slotIndex ) );
 		}
 
 		// Return the result
-		return CRAFT_MANAGER.findMatchingRecipe( craftingInventory, this.terminal.getWorldObj() );
+		return ContainerPartArcaneCraftingTerminal.CRAFT_MANAGER.findMatchingRecipe( craftingInventory, this.terminal.getWorldObj() );
 	}
 
 	/**
@@ -764,7 +765,7 @@ public class ContainerPartArcaneCraftingTerminal
 
 		// Get the cost
 		this.requiredAspects = ArcaneRecipeHelper.INSTANCE.getRecipeAspectCost( this.terminal, 0,
-			CRAFTING_GRID_TOTAL_SIZE, forRecipe );
+			ContainerPartArcaneCraftingTerminal.CRAFTING_GRID_TOTAL_SIZE, forRecipe );
 
 		// Ensure there is a cost
 		if( this.requiredAspects == null )
@@ -822,7 +823,7 @@ public class ContainerPartArcaneCraftingTerminal
 		{
 			// Get the result of the recipe.
 			return ArcaneRecipeHelper.INSTANCE.getRecipeOutput( this.terminal, 0,
-				CRAFTING_GRID_TOTAL_SIZE, forRecipe );
+				ContainerPartArcaneCraftingTerminal.CRAFTING_GRID_TOTAL_SIZE, forRecipe );
 		}
 
 		return null;
@@ -1601,23 +1602,6 @@ public class ContainerPartArcaneCraftingTerminal
 
 		// No matches at all :(
 		return null;
-	}
-
-	/**
-	 * Called when a slot is clicked by the player.
-	 */
-	@Override
-	public ItemStack slotClick( final int slotNumber, final int button, final int flag, final EntityPlayer player )
-	{
-		if( ( slotNumber == this.resultSlot.slotNumber ) && ( button == ThEGuiHelper.MOUSE_BUTTON_RIGHT ) )
-		{
-			// If right clicking on result slot, change it to left click
-			return super.slotClick( slotNumber, ThEGuiHelper.MOUSE_BUTTON_LEFT, flag, player );
-		}
-
-		// Pass to super
-		return super.slotClick( slotNumber, button, flag, player );
-
 	}
 
 	/**
